fix: update background color, adjust cursor visibility, and refine layout in components

--- a/acts_showcase/app/globals.css
+++ b/acts_showcase/app/globals.css
@@ -17,7 +17,7 @@
 html,
 body {
     cursor: none;
-    background-color: #12011c;
+    background-color: #151515;
 }
 @font-face {
     font-family: BoldFace;
